--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mongoose": "^8.8.4",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-toastify": "^11.0.0"
   },
   "devDependencies": {
     "postcss": "^8",
